--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.squareup.retrofit2:retrofit:2.0.0'
     compile 'com.squareup.retrofit2:converter-moshi:2.0.0'
+    compile 'com.github.arimorty:floatingsearchview:2.1.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
 }
 repositories {
