--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,13 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-moshi:2.0.0'
     compile 'com.github.arimorty:floatingsearchview:2.1.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'io.paperdb:paperdb:2.1'
+    compile 'android.arch.lifecycle:extensions:1.0.0-alpha3'
+    compile 'android.arch.persistence.room:runtime:1.0.0-alpha3'
+    annotationProcessor "android.arch.lifecycle:compiler:1.0.0-alpha3"
+    annotationProcessor "android.arch.persistence.room:compiler:1.0.0-alpha3"
 }
 repositories {
     mavenCentral()
+    maven { url 'https://maven.google.com' }
 }
